# JAMAL

./: .gitignore  README.md
.cursor/rules/: general_rules.mdc
backend/: README.md  requirements.txt  run.py
backend/app/: analytics.py  api_docs.py  chatbot.py  event_loop.py  image_generation.py  main.py  routes.py
backend/app/links/: test_link.json
backend/app/services/: analytics.py  chatbot.py  llm_integration.py  memory.py  response.py  swagger_config.py  web_search.py
backend/app/uploads/: Degree_Program.pdf.meta.json  Module_Nine_Project_Report_Capstone_Component_Andrew_Robinson.docx.meta.json  Oak_Hall_-_Receipt.pdf.meta.json  ResponseSummary.pdf.meta.json
backend/mcp_server/jamal-mcp-server/: main.py  pyproject.toml  server.py
backend/tests/: chat_endpoint_collection.json  chat_endpoint_tests.md  conftest.py  requirements-test.txt  test_chat_api.py  test_memory_api.py
docs/api/: README.md  analytics.md  chat.md  documents.md  links.md  memory.md
docs/components/: ChatContainer.md  ChatMessage.md  Dashboard.md  FileList.md  LinkInputDialog.md  LinkList.md  README.md  Sidebar.md  UserInput.md
docs/data-models/: Message.md  README.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/src/: App.tsx  config.ts  index.css
frontend/src/components/: Chat.tsx  ChatContainer.tsx  ChatInterface.tsx  ChatMessage.tsx  Dashboard.tsx  FileList.tsx  LinkInputDialog.tsx  LinkList.tsx  MemoryViewer.tsx  SettingsMenu.tsx  Sidebar.tsx  UserInput.tsx  theme-toggle.tsx
frontend/src/hooks/: useIsMobile.ts
(+9 files in other folders)
